# tank_dynamics

./: CHANGELOG.md  CMakeLists.txt  DOCUMENTATION_UPDATE_SUMMARY.md  PHASE4_DOCUMENTATION_INDEX.md  README.md  build.sh  pyproject.toml  pyrightconfig.json  test_import.py
.zed/: settings.json
api/: .env.example  README.md  main.py  models.py  requirements.txt  simulation.py
api/tests/: __init__.py  conftest.py  test_brownian.py  test_concurrent.py  test_endpoints.py  test_websocket.py
bindings/: CMakeLists.txt  bindings.cpp  simulator_verify.cpp  stepper_verify.cpp
docs/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FRONTEND_GUIDE.md  LESSONS_LEARNED.md  PRE_MERGE_REVIEW.md  feedback.md  next.md
docs/general_notes/: CMAKE_WORKAROUNDS.md
docs/project_docs/: API_REFERENCE.md  CONSTANTS_ARCHITECTURE.md  FASTAPI_API_REFERENCE.md  PHASE4_COMPLETION.md  PHASE4_CONTINUATION_ROADMAP.md  next.md
examples/: rest_client.py  websocket_client.html  websocket_client.py
frontend/: next.config.ts  test-trends.mjs  tsconfig.json
frontend/app/: globals.css  page.tsx  providers.tsx
frontend/components/: ConnectionStatus.tsx  FlowsChart.tsx  InletFlowControl.tsx  LevelChart.tsx  PIDTuningControl.tsx  ProcessView.tsx  TrendsView.tsx  ValveChart.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: websocket.ts
prompts/: senior-engineer.md
scripts/: dev.sh
src/: CMakeLists.txt  constants.h  pid_controller.cpp  pid_controller.h  simulator.cpp  simulator.h  stepper.cpp  stepper.h  tank_model.cpp  tank_model.h
tank_sim/: __init__.py  _tank_sim.pyi
tests/: CMakeLists.txt  test_pid_controller.cpp  test_simulator.cpp  test_stepper.cpp  test_tank_model.cpp
tests/python/: __init__.py  conftest.py  test_simulator_bindings.py
