[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "tank-sim"
version = "0.1.0"
description = "Real-time tank dynamics simulator with PID control"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Roger"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-random-order>=1.1",
    "httpx>=0.24",
    "pybind11>=2.11",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
    "pydantic>=2.0",
]

[tool.scikit-build]
cmake.minimum-version = "3.20"
cmake.build-type = "Release"
wheel.packages = ["tank_sim"]

[tool.pytest.ini_options]
testpaths = ["tests/python", "api/tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.pyright]
# Pyright type checker configuration
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
# Ignore C++ extension module type stubs (we use pybind11)
reportMissingModuleSource = false
# Include/exclude paths
include = ["api", "tank_sim", "tests"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    ".venv",
    "frontend",
    "docs"
]

[dependency-groups]
dev = [
    "pytest-randomly>=4.0.1",
]
